                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 02-09-2006 fixed: UPnP memory leak + possible race condition during house cleaning
 - 02-09-2006 fixed: dvdplayer wouldn't output prologic for ac3 streams when analog was selected. 
 - 02-09-2006 changed: Music Info Loader now prioritises previously cached information over the music database.
 - 02-09-2006 fixed: [ 1550694 ] "Clean Video Database" deletes too much.
 - 01-09-2006 changed: smb/xbmc and inside rar/zip should now stack dvd directories
 - 01-09-2006 fixed: [ 1548039 ] Thumbnails for .m3u Playlists show the "My Pictures"-Icon
 - 01-09-2006 fixed: Possible crash in TTF font rendering if the font file disappears.
 - 01-09-2006 fixed: [ 1532642 ] Weather icons disappear if subtitles are enabled.
 - 01-09-2006 fixed: <aspectratio> keep and scale were not applied correctly if the window's coordinate system was different than the current GUI resolution (eg python loaded windows)
 - 01-09-2006 fixed: files/folders beginning with "..." could not be opened over smb.
 - 01-09-2006 fixed: Textbox would wordwrap even when a 2nd label was present (eg Album Information tracks listing)
 - 01-09-2006 changed: Don't show notification of memory card at boot.
 - 01-09-2006 added: some more labels, ids 20176-20181. hopefully this will be the last.
 - 31-08-2006 fixed: mockup with fonts and profile logins.
 - 31-08-2006 changed: dialog.close(..) now takes 'all' as windowid to close all dialogs.
 - 31-08-2006 fixed: Pixel ratio passed into visualisations was wrong.
 - 31-08-2006 changed: PreviousItem takes you back to the start of the current item if you aren't within 3 seconds of the start (like most CD players)