@@ -1410,5 +1410,6 @@
   <string id="20181">Backspace</string>
   <string id="20182">Space</string>
   <string id="20183">Reload Skin</string>
+  <string id="20184">Rotate using EXIF information</string>
   <string id="29999">Auto Flicker Filter Patch</string>
 </strings>
